# DevelopmentGroupGtk

./: CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
scripts/: video-test.sh
src/: RtpVideo.hpp  main.cpp
src/controller/video/: PlayPauseVideoController.cpp  PlayPauseVideoController.hpp  ShowHideFPSController.cpp  ShowHideFPSController.hpp
src/mediax/: version.h
src/mediax/common/: example_helpers.cc  example_helpers.h
src/mediax/lib/src/rtp/: rtp.h  rtp_depayloader.cc  rtp_depayloader.h  rtp_payloader.cc  rtp_payloader.h  rtp_utils.cc  rtp_utils.h
src/mediax/lib/src/sap/: sap.h  sap_announcer.cc  sap_announcer.h  sap_listener.cc  sap_listener.h  sap_utils.cc  sap_utils.h
src/mediax/lib/src/uncompressed/: rtp_uncompressed_depayloader.cc  rtp_uncompressed_depayloader.h  rtp_uncompressed_payloader.cc  rtp_uncompressed_payloader.h
src/mediax/lib/src/utils/: colourspace_cpu.cc  colourspace_cpu.h
src/model/video/: Video.cpp  Video.hpp
src/model/video/signal/: PlayPauseVideoSignal.cpp  PlayPauseVideoSignal.hpp  ShowHideFPSSignal.cpp  ShowHideFPSSignal.hpp
src/ui/: MainWindow.cpp  MainWindow.hpp  PaintArea.cpp  PaintArea.hpp
src/utils/designPattern/: SignalPublisher.hpp  SignalSubscriber.hpp
src/view/communication/video/: RtpVideo.cpp  RtpVideo.hpp
src/view/ui/: MainWindow.cpp  MainWindow.hpp
src/view/ui/video/: PaintArea.cpp  PaintArea.hpp  PlayPauseVideoView..hpp  PlayPauseVideoView.cpp  PlayPauseVideoView.hpp  ShowHideFPSVideoView.cpp  ShowHideFPSVideoView.hpp
